deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ics.nju.edu.cn
      http:
        paths:
          - path: /bdkit/(.*)
            backend:
              serviceName: backend-service
              servicePort: 8081
